--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
   "homepage": "",
   "dependencies": {
     "gulp": "^3.9.0",
+    "gulp-batch": "1.0.5",
+    "gulp-concat": "^2.6.1",
+    "gulp-cssmin": "0.1.7",
     "gulp-jshint": "^2.0.0",
     "gulp-rename": "1.2.2",
-    "gulp-cssmin": "0.1.7",
     "gulp-sass": "2.2.0",
     "gulp-uglify": "^1.5.1",
-    "gulp-watch": "4.3.5",
-    "gulp-batch": "1.0.5"
+    "gulp-watch": "4.3.5"
   },
   "private": true,
   "devDependencies": {
